Bug 258424 - [macOS] Take foreground assertion for client navigation in background views
Summary: [macOS] Take foreground assertion for client navigation in background views
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-06-22 17:12 PDT by Chris Dumez
Modified: 2023-06-22 21:20 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2023-06-22 17:12:01 PDT
Take foreground assertion for client navigation in background views on macOS, like we already do on iOS. This is important now that we've adopted RunningBoard on macOS and that RunningBoard assertion control the priority of our processes.
Comment 1 Chris Dumez 2023-06-22 17:12:31 PDT
<rdar://107383904>
Comment 2 Chris Dumez 2023-06-22 17:15:17 PDT
Pull request: https://github.com/WebKit/WebKit/pull/15217
Comment 3 EWS 2023-06-22 21:20:07 PDT
Committed 265442@main (985a124eb978): <https://commits.webkit.org/265442@main>

Reviewed commits have been landed. Closing PR #15217 and removing active labels.