[macOS] Take foreground assertion for client navigation in background views https://bugs.webkit.org/show_bug.cgi?id=258424 rdar://107383904

Reviewed by Simon Fraser.

Take foreground assertion for client navigation in background views on macOS,
like we already do on iOS. This is important now that we've adopted RunningBoard
on macOS and that RunningBoard assertion control the priority of our processes.

* Source/WebKit/UIProcess/API/APIPageConfiguration.h:
(API::PageConfiguration::clientNavigationsRunAtForegroundPriority const):
(API::PageConfiguration::setClientNavigationsRunAtForegroundPriority):
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewConfiguration.mm:
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewConfigurationPrivate.h:
* Source/WebKit/UIProcess/Cocoa/WebPageProxyCocoa.mm:
(WebKit::WebPageProxy::shouldForceForegroundPriorityForClientNavigation const):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
* Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::WebPageProxy::shouldForceForegroundPriorityForClientNavigation const): Deleted.

Canonical link: https://commits.webkit.org/265442@main